--- a/style.css
+++ b/style.css
@@ -4,3 +4,22 @@
     border: border-box;     /*for making the border within the designated space*/
 }
 /*nav-bar*/
+.navbar{
+    height: 60px;
+    background-color: #0f1111;
+    color: white;
+}
+/* nav-logo (this is the parent container for the logo) */
+/*box-1 */
+.nav-logo{
+    height: 50px;
+    width: 100px;
+    /* background-color: blueviolet; */
+}
+/* This is the the actual logo div itself */
+.logo{
+    height: 50px;
+    width: 100%;
+    background-image: url(images/amazon_logo.png);
+    background-size: cover;
+}
