--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 .border:hover{
     border: 1.5px solid white;
 }
+/* the navaddress (deliver to India) starts here  */
 .navaddress{
     align-items: center;
 }
@@ -42,4 +43,8 @@
     font-size: 0.75rem;
     color: #cccc;
     margin-left: 24px;
+}
+/* the search bar starts here  */
+.search-panel{
+    display: flex;
 }
