--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     background-color: #0f1111;
     color: white;
     display: flex;
+    align-items: flex-start;
     align-items: center;
 }
 /* nav-logo (this is the parent container for the logo) */
@@ -47,4 +48,28 @@
 /* the search bar starts here  */
 .search-panel{
     display: flex;
+    /* width: 900px; */ /*this was removed on suggestion by gemini for good scalability*/
+    flex-grow: 1;
+    margin: 0 15px;
+}
+.all-panel{
+    margin-left: 20px;
+    height: 45px;
+    width: 40px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.search-bar{
+    width: 90%; 
+}
+.search-glass{
+    height: 45px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:orange;
+    border: none;
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
 }
