--- a/style.css
+++ b/style.css
@@ -122,3 +122,22 @@
     margin-left: 12px;
     font-size: 0.9rem;
 }
+/* This is the end of the navigation section  */
+/* this is the start of hero-section  */
+.hero-section{
+    height: 400px;
+    background-image:linear-gradient(to bottom, rgba(226, 231, 230, 0) 70%, rgba(226, 231, 230, 1) 100%), url(images/hero_image.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.intro{
+    background-color: white;
+    height: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 40px;
+    width: 80%;
+}
