--- a/style.css
+++ b/style.css
@@ -59,16 +59,19 @@
 }
 .all-panel{
     /* margin-left: 20px; */
-    height: 45px;
-    width: 40px;
+    /* height: 45px; */             /*all this is on suggestions from shraddha didi*/
+    /* width: 40px; */
+    background-color: #e6e6e6;
+    border: none;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
 .search-bar{
     width: 100%; 
+    border: none;
 }
 .search-glass{
-    height: 45px;
+    height: 40px;
     width: 40px;
     display: flex;
     justify-content: center;
@@ -142,6 +145,7 @@
     width: 80%;
 }
 /* this is the end of the hero-section of the page  */
+/* This is the start of shop-section  */
 .shop-section{
     background-color: #e2e7e6;
     display: flex;
@@ -152,5 +156,18 @@
     height: 400px;
     background-color: white;
     width: 23%;
-    margin: 15px 0;
+    margin-top: 15px;
+    padding: 20px 0 15px;
+}
+/* I will be now including images in the shop-section boxes  */
+.box-img{
+    height: 320px;
+    /* width: 90%; */
+    background-size: cover;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.box-content{
+    margin-left: 10px;
+    margin-right: 10px;
 }
