--- a/style.css
+++ b/style.css
@@ -185,3 +185,13 @@
     color: white;
     text-decoration: none;
 }
+.bye-bye{
+    background-color: #0f1111;
+    color: white;
+    text-align: center;
+    font-size: 0.8rem;
+    padding: 8px 0;
+}
+.bottom{
+    margin-left: 5px
+}
